# chessers

./: .gitignore  Cargo.toml  readme.md
src/: arena.rs  main.rs  nn.rs  player.rs  players.rs  playground.rs  ui.rs
src/cli/: mod.rs
