[package]
name = "chessers"
version = "0.1.0"
edition = "2021"
description = "Chess bot using a convolutional network on a 6-channel bitboard to predict optimal moves"


[dependencies]
candle-core = "0.7.0"
candle-nn = "0.7.0"
chess = "3.2.0"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
csv = "1.3.0"
rand = "0.8.5"
